kubernetes/workloads/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: media
spec:
  selector:
    app: radarr
  ports:
    - port: 7878
      targetPort: http
